fixed alignment of optional text label for address 2 input fields

--- a/Homework2.css
+++ b/Homework2.css
@@ -173,3 +173,9 @@ p {
 #first-product, #first-price {
     padding-top: 8px;
 }
+
+#address-box {
+    margin-top: 0;
+    padding-top: 0;
+    display: flex;
+}
